<resources>
    <string name="app_name">YAH!</string>
    <string name="title_home">Home</string>
    <string name="title_agenda">Agenda</string>
    <string name="title_food">Food</string>
    <string name="title_prizes">Prizes</string>
    <string name="title_faq">FAQs</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>

</resources>
